<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.CategoryFragment">

    <data>
        <variable name="categories" type="com.example.foodapp.model.Categories" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/categoryParentLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app"
        android:clipChildren="false"
        android:clipToPadding="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/homeAppbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/homeToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:background="#DBE2F0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:elevation="3dp">

                    <TextView
                        android:id="@+id/homeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_welcome"
                        android:textColor="@color/colorPrimary"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        android:layout_marginTop="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/homeSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@+id/homeTitle"
                        app:layout_constraintTop_toBottomOf="@+id/homeTitle" />

                    <ImageView
                        android:id="@+id/homeFav"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_home_fav"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/MidnightBlue" />

                    <ImageView
                        android:id="@+id/homeSearch"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_search_category_default"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="55dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/MidnightBlue" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/categoryLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/CategoryContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/recommendation"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/homeRecViewPager"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                        android:id="@+id/homePagerDot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:dotsColor="@color/colorPrimary"
                        app:dotsStrokeColor="@color/colorPrimary"
                        app:dotsCornerRadius="8dp"
                        app:dotsSize="7dp"
                        app:dotsSpacing="2.5dp"
                        app:dotsStrokeWidth="1dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginVertical="4dp"
                        android:text="@string/categories"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categoryRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

<!--                    <com.google.android.material.card.MaterialCardView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="150dp"-->
<!--                        app:cardCornerRadius="15dp"-->
<!--                        android:layout_marginTop="8dp"-->
<!--                        android:layout_marginBottom="4dp"-->
<!--                        android:layout_marginHorizontal="15dp"-->
<!--                        android:background="@color/CornflowerBlue">-->

<!--                          <LinearLayout-->
<!--                              android:layout_width="match_parent"-->
<!--                              android:layout_height="wrap_content"-->
<!--                              android:orientation="horizontal">-->

<!--                              <LinearLayout-->
<!--                                  android:layout_height="wrap_content"-->
<!--                                  android:layout_width="0dp"-->
<!--                                  android:layout_weight="4.5"-->
<!--                                  android:orientation="vertical">-->

<!--                                  <ImageView-->
<!--                                      android:id="@+id/categoryImage"-->
<!--                                      android:bindWithDownloadUrl="@{categories.strCategoryThumb}"-->
<!--                                      android:layout_width="match_parent"-->
<!--                                      android:layout_height="0dp"-->
<!--                                      android:layout_margin="5dp"-->
<!--                                      android:scaleType="centerCrop"-->
<!--                                      android:layout_weight="10"-->
<!--                                      tools:src="@drawable/placeholder" />-->

<!--                                  <TextView-->
<!--                                      android:id="@+id/categoryTitle"-->
<!--                                      android:layout_width="match_parent"-->
<!--                                      android:layout_height="0dp"-->
<!--                                      android:layout_margin="3dp"-->
<!--                                      android:padding="2dp"-->
<!--                                      android:textStyle="bold"-->
<!--                                      android:text="@{categories.strCategory}"-->
<!--                                      android:textColor="@color/black"-->
<!--                                      android:textAlignment="center"-->
<!--                                      android:layout_weight="3"/>-->

<!--                              </LinearLayout>-->

<!--                              <TextView-->
<!--                                  android:id="@+id/categoryDesc"-->
<!--                                  android:text="@{categories.strCategoryDescription}"-->
<!--                                  android:textSize="12sp"-->
<!--                                  android:layout_width="0dp"-->
<!--                                  android:layout_height="wrap_content"-->
<!--                                  android:layout_weight="10"-->
<!--                                  android:textStyle="bold"-->
<!--                                  android:layout_margin="2dp"-->
<!--                                  android:padding="4dp"/>-->

<!--                          </LinearLayout>-->

<!--                    </com.google.android.material.card.MaterialCardView>-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/areas"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/areaRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeNoConnection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <include
                android:id="@+id/disconnectLay"
                layout="@layout/network_error" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/homeShimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/shimmer_home" />

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>